2008-07-20  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/keybindings.c:
   Add menu item accelerators first after default and user keybindings
   have been read to avoid that menu item accelerators of user
   keybindings can't be overridden anymore (closes #2021703).


2008-07-18  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * plugins/classbuilder.c, plugins/demoplugin.c, plugins/export.c,
   plugins/filebrowser.c, plugins/htmlchars.c, plugins/vcdiff.c,
   src/about.c, src/build.c, src/dialogs.c, src/document.c,
   src/editor.c, src/encodings.c, src/filetypes.c, src/gb.c, src/main.c,
   src/msgwindow.c, src/notebook.c, src/plugins.c, src/prefs.c,
   src/printing.c, src/project.c, src/search.c, src/templates.c,
   src/tools.c, src/treeviews.c, src/ui_utils.c, src/vte.c:
   Rename "delete_event" to "delete-event".
   Remove some unnecessary GObject casts in g_signal_connect() calls.
 * src/geanywraplabel.c:
   Remove unnecessary finalize() function.
 * plugins/classbuilder.c:
   Encourage single header includes as it is necessary with GTK 2.14+.
 * src/treeviews.c:
   Handle tooltip requests for items in the open files tree view
   properly by using gtk_tree_view_get_tooltip_context().


2008-07-17  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/ui_utils.c, src/ui_utils.h, src/main.c:
   Move widget array lookups from main.c to ui_utils.c.
 * src/interface.c, src/keybindings.c, src/keybindings.h,
   src/callbacks.c, src/callbacks.h, geany.glade:
   Add Find Document Usage popup menu command & keybinding.
 * src/interface.c, src/ui_utils.c, geany.glade:
   Move editor popup menu current word items to submenu.


2008-07-15  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * data/filetypes.fortran:
   Add missing keywords: 'elemental', 'pure' and 'procedure' which also
   fix broken folding (patch by Henrik Holst, thanks).
 * src/document.c:
   Enforce focus grabbing when creating new documents (closes #2018427).

