@@ -2222,29 +2222,6 @@ void
 on_menu_reload_configuration1_activate (GtkMenuItem     *menuitem,
                                         gpointer         user_data)
 {
-	guint i;
-
-	/* reload templates */
-	templates_free_templates();
-	templates_init();
-
-	/* reload snippets */
-	editor_snippets_free();
-	editor_snippets_init();
-
-	/* reload filetype extensions */
-	configuration_read_filetype_extensions();
-
-	/* save possibly changed commands before re-reading them */
-	filetypes_save_commands();
-
-	/* reload filetype configs */
-	for (i = 0; i < filetypes_array->len; i++)
-	{
-		/* filetypes_load_config() will skip not loaded filetypes */
-		filetypes_load_config(i, TRUE);
-	}
-
-	ui_set_statusbar(TRUE, _("Configuration files reloaded."));
+	utils_reload_configuration();
 }
 
